--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
    "dependencies": {
       "@types/react-redux": "^7.1.20",
       "@types/redux-saga": "^0.10.5",
+      "axios": "^0.24.0",
+      "dotenv": "^10.0.0",
+      "formik": "^2.2.9",
       "next": "12.0.7",
       "next-redux-wrapper": "^7.0.5",
       "react": "17.0.2",
       "react-dom": "17.0.2",
+      "react-icons": "^4.3.1",
       "react-redux": "^7.2.6",
       "redux-devtools-extension": "^2.13.9",
       "redux-saga": "^1.1.3",
-      "sass": "^1.45.0"
+      "sass": "^1.45.0",
+      "yup": "^0.32.11"
    },
    "devDependencies": {
       "@types/node": "17.0.0",
